--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to GitHub Pages
+name: Github Pages Astro CI
 
 on:
   # Trigger the workflow every time you push to the `main` branch
@@ -20,12 +20,13 @@ jobs:
     steps:
       - name: Checkout your repository using git
         uses: actions/checkout@v2          
-      - name: Install, build, and upload your site output
+      - name: Install, build, and upload your site
         uses: withastro/action@v0
         # with:
             # path: . # The root location of your Astro project inside the repository. (optional)
             # node-version: 16 # The specific version of Node that should be used to build your site. Defaults to 16. (optional)
             # package-manager: yarn # The Node package manager that should be used to install dependencies and build your site. Automatically detected based on your lockfile. (optional)
+
 
   deploy:
     needs: build
